Some small updates - see "2022.1" in README

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "coffee-store-web",
+    "name": "coffee-store-web-basic",
     "version": "2022.1.1",
-    "homepage": "https://github.com/symphoniacloud/coffee-store-web",
+    "homepage": "https://github.com/symphoniacloud/coffee-store-web-basic",
     "license": "MIT",
     "author": {
         "email": "mike@symphonia.io",
@@ -19,10 +19,10 @@
         "typescript": "4.x"
     },
     "scripts": {
-        "deploy": "npx cdk deploy --output build/cdk.out --require-approval never",
-        "cdk-diff" : "npx cdk diff --output build/cdk.out --require-approval never",
-        "cdk-destroy" : "npx cdk destroy --output build/cdk.out --require-approval never",
+        "deploy": "cd src/cdk && npx cdk deploy",
+        "cdk-diff" : "cd src/cdk && npx cdk diff",
+        "cdk-destroy" : "cd src/cdk && npx cdk destroy",
         "precdk-command": "echo \"Running CDK with command: $npm_config_command\"",
-        "cdk-command": "npx cdk $npm_config_command --output build/cdk.out --require-approval never"
+        "cdk-command": "cd src/cdk && npx cdk $npm_config_command"
     }
 }
